# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  08 Apr 2005; Marius Mauch <genone@gentoo.org> bin/emerge:
  Add a list of active user config files to emerge --info.
  
  06 Apr 2005; Marius Mauch <genone@gentoo.org> pym/set_modules/*.py:
  Added a basic framework for package sets including modules for "system",
  general filelists (including "world") and "security", the latter currently
  depending on glsa.py from gentoolkit.

  03 Apr 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_dep.py:
  Added shortcut to circular dep "resolution" as per bug 85130. Removed
  the traversed cache dict from __traverse_nodes and made the original
  list into a dict.

  27 Mar 2005; Brian Harring <ferringb@gentoo.org> bin/ebuild-functions.sh:
  Pushed ECONF_SOURCE support forward from stable.  Seems kind of fluffish.

  23 Mar 2005; Jason Stubbs <jstubbs@gentoo.org> bin/dispatch-conf:
  Removed the -a argument from all diff usage.

  21 Mar 2005; Marius Mauch <genone@gentoo.org> pym/portage_const.py:
  Adding prerm and postrm to EBUILD_PHASES so logging works there too.
  
  21 Mar 2005; Marius Mauch <genone@gentoo.org> bin/ebuild-functions.sh:
  Force the copy by removing the destination first in econf/autoconfig,
  prevents sandbox violations by libtoolize calls without --copy.

  15 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/cache/*;
  Cache updates moving _eclasses_ handling up into the template layer, 
  added delayed sync'ing support (see database.autocommit) which is relevant 
  for rdbms backends.

  13 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/portage_dep.py:
  Addded a traversed cache dict to __traversed per call, the slowdown was 