@@ -1,5 +1,5 @@
 #!/bin/bash
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header$
 
@@ -43,11 +43,11 @@ source /sbin/functions.sh
 # $1 = package-name w/version
 # $2 = category
 do_pkg() {
-	mkdir -p "${PORTAGE_TMPDIR}/portage-pkg" || exit 1
-	chmod 0750 "${PORTAGE_TMPDIR}/portage-pkg"
-	MYDIR="${PORTAGE_TMPDIR}/portage-pkg/$1"
+	mkdir -p "${PORTAGE_TMPDIR}/binpkgs" || exit 1
+	chmod 0750 "${PORTAGE_TMPDIR}/binpkgs"
+	MYDIR="${PORTAGE_TMPDIR}/binpkgs/$1"
 	SRCDIR="${PORTAGE_DB}/$2/$1"
-	LOG="${PORTAGE_TMPDIR}/portage-pkg/$1-quickpkglog"
+	LOG="${PORTAGE_TMPDIR}/binpkgs/$1-quickpkglog"
 
 	ebegin "Building package for $1"
 	(
