@@ -17,7 +17,7 @@ modified since they were first installed.
 .br
 The packages, after being created, will be placed in \fBPKGDIR\fR.  
 This variable is defined in \fBmake.conf\fR(5) and defaults to 
-/var/tmp/portage-pkg.
+/var/tmp/binpkgs.
 .SH OPTIONS
 .TP
 .B <list of packages>
