@@ -7,6 +7,10 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  12 Apr 2005; Mike Frysinger <vapier@gentoo.org> bin/quickpkg pym/ebuild.py 
+  pym/portage.py:
+  Rename 'portage-pkg' to 'binpkgs' so tab completion for 'portage' works.
+
   08 Apr 2005; Marius Mauch <genone@gentoo.org> bin/emerge:
   Add a list of active user config files to emerge --info.
   
